--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,12 @@
 # 前書き {.unnumbered}
 
+私たちは日常的に多くのグラフに出会います。街中のポスター、SNS、テレビや新聞などの
+メディアでさまざまな種類のグラフが登場します。
+
+<!--
+そこには見た目が綺麗なもの、色使いが素敵なもの、
+-->
+
 本書は「統計グラフ」の作成に焦点を当てたものです。統計グラフに関する、歴史と作成の手順について学びます。また、統計グラフを作る際の注意事項についても紹介します。
 
 本書の読者が統計グラフを作成する際の手引きとなることを願います。
