--- a/intro.qmd
+++ b/intro.qmd
@@ -1,6 +1,18 @@
 # 統計グラフとは何か
 
+統計グラフを作り始める前に、まずは統計グラフがどのようなものなのか知っておく必要があります。
+グラフの構成要素を知ることは、グラフを作る際だけでなく、グラフを見る時も役立ちます。
+グラフを見る側に立つときは、グラフに書かれたデータや内容を見ることになりますが、
+実際には「見る」ではなく「読む」ことが大事です。この軸が示しているデータは何なのか、
+この色や凡例の意味は何か。優れたグラフは見る人の直感に働きかけますが、多くのグラフ、
+特に統計グラフは見る人に対する配慮にかけているのが現実です。
+
+グラフに書かれた要素を読み解く術を学んでいきましょう。
+
 ## 統計グラフの要素
+
+- 座標（位置）、形、大きさ、色、線の太さ・種類
+- データをスケールに対応させる
 
 ### 嫌われやすいグラフ
 
